--- a/src/q6/conv-ELEC1310/summary/conv-ELEC1310-summary.tex
+++ b/src/q6/conv-ELEC1310/summary/conv-ELEC1310-summary.tex
@@ -909,7 +909,7 @@ propre au matériau.
 Chaque section du matériau magnétique intercepte lui aussi un flux
 variable dans le temps. Par le loi de Faraday, une force électromotrice
 apparait donc sur le contour de cette section
-\[ e_{cm} = \fdif{}\Phi_{cm} \neq 0. \]
+\[ e_{cm} = \frac{d\Phi_{cm}}{dt} \neq 0. \]
 Si la conductivité du matériau magnétique est non-nulle, sa résistance
 $R_{cm} \neq \infty$ et donc un courant $i_{cm} \neq 0$ apparaît. On les
 appelle les courants de Foucault. Il est possible de réduire ces courants
