--- a/src/q6/autolin-INMA1510/summary/autolin-INMA1510-summary.tex
+++ b/src/q6/autolin-INMA1510/summary/autolin-INMA1510-summary.tex
@@ -848,7 +848,7 @@ U(s)=\frac{Y(s)}{G(s)}-\frac{V(s)H(s)}{G(s)}=\frac{Y(s)}{G(s)}-\frac{H(s)}{G(s)}
 \]
 En choissisant ainsi ces valeurs pour $C_1(s)$ et $C_2(s)$, on annule totalement l'influence de la perturbation pour toute valeur de $v(t)$.
 
-L'action prédictive (ou commande anticipatrice) n'est pas applicable si $G(s)$ est à non minimum de phase, car le compensateur $C_1(s)$ aurait alors un pôle instable.
+L'action prédictive (ou commande anticipatrice) n'est pas applicable si $G(s)$ est à non minimum de phase, car le compensateur $C_1(s)$ aurait alors un pôle instable. De plus, si $G(s)$ possède un retard, l'action prédictive est irréalisable.
 
 
 \begin{figure}[!ht]
